--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+appnope==0.1.0
 audioread==2.1.8
+backcall==0.1.0
 cffi==1.13.2
 cycler==0.10.0
 decorator==4.4.1
 Django==2.2.7
+django-extensions==2.2.5
 imageio==2.6.1
+ipython==7.9.0
+ipython-genutils==0.2.0
+jedi==0.15.1
 joblib==0.14.0
 kiwisolver==1.1.0
 librosa==0.7.1
@@ -12,7 +18,12 @@ matplotlib==3.1.1
 networkx==2.4
 numba==0.46.0
 numpy==1.17.4
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
 Pillow==6.2.1
+prompt-toolkit==2.0.10
+ptyprocess==0.6.0
 pudb==2019.1
 pycparser==2.19
 Pygments==2.4.2
@@ -27,4 +38,6 @@ scipy==1.3.2
 six==1.13.0
 SoundFile==0.10.2
 sqlparse==0.3.0
+traitlets==4.3.3
 urwid==2.0.1
+wcwidth==0.1.7
