Kind of working

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 socket = 0.0.0.0:8000
 chdir = /app
-module = chord-recognition.wsgi:application
+module = chord_recognition.wsgi:application
 protocol = uwsgi
 logto = /var/log/chord-recognition/uwsgi.log
 static-map = /static=/var/www/static
